增加微积分板块

--- a/language.org
+++ b/language.org
@@ -9,6 +9,7 @@
 - dilemma:困境；
 - variance：方差；
 - diagonal:对角线；
+- histogram:直方图
 - asymptotically:渐进地；
 - apart from:远离，除…之外；且不说；缺少
 - Effectively：实际上；
@@ -60,71 +61,5 @@
 - discriminant：判别式；
 - likelihood：可以翻译为似然，最大似然就是maximum likelihood；
 - maximum likelihood estimation:最大似然估计
-# * 公司
-# ** nationz
-
-# ** codoon
-# *** 入职
-# - 登陆地址：http://exmail.qq.com/login
-# - 账号：lixc@codoon.com
-# - 初始密码：l123456（登陆后更改密码）
-# - 共享地址：192.168.1.250
-# - 账号：guest 密码：codoon.0123
-# - wifi 密码：codoon20140313
-# - 咕咚 QQ 群：115136492
-# - 请在办理完入职手续后准备以下资料办理园区一卡通（就餐卡/停车卡）
-#  + 办理时间：下午 14：30-16:50
-#  + 办理地址：D7 负一层的一卡通充值中心（食堂旁）
-#  + 办理流程：携带工作证明（前台领取）+ 身份证（原件或复印件）+ 工本费 25 元（退卡时全额退还）。
-# - 登陆公司邮箱设置签名后，请第一时间发一封自我介绍的邮件给 all（公司全体员工）。
-# - 邮箱签名格式：\
-#     咕咚网 www.codoon.com\\
-#     ＸＸ部 XXX 13800138000\\
-#     电话：+86（28）85980848\\
-#     传真：+86（28）85980848-872\\
-#     地址：成都市高新区天府软件园D区7栋13层\\
-#     邮编：610041
-# - 请将面部清晰生活照片电子档以“姓名-部门”的方式命名，并发送至邮箱 ganyx@codoon.com
-# - 每月5日为工资发放日(遇节假日延迟)，如对薪酬发放信息有疑问请本人在工资发放后5日内至综合部经理处咨询，逾期视为个人确认薪资无异议。
-# - 公司不提供其他任何形式的个人薪酬发放通知。
-# - 备注信息：公司实行弹性工作。（记得一定印个手印哦）
-# - VPN:lixc O@MhHlRYu[x+-%z 123.1.154.31
-# - 硬件部同事座位如表\ref{tbl:hardware-department}所示
-# #+caption:  硬件部同事
-# #+label: tbl:hardware-department
-# #+attr_latex: :placement=[H]
-# |------+--------+--------+------+------|
-# | 万磊 | 杨占栋 | 高永会 | 邓建 | 袁术 |
-# |------+--------+--------+------+------|
-# |      | 杨鸿翼 | 李孝超 | 陈帅 | 罗强 |
-# |------+--------+--------+------+------|
-# | 董杰 |        |        |      |      |
-# |------+--------+--------+------+------|
-# | 曹飞 |        |        |      |      |
-# |------+--------+--------+------+------|
-# | 毛伟 |        |        |      |      |
-# |------+--------+--------+------+------|
-# 认识的人
-# - android开发：王祥
-# - IOS开发:李明/张阅
-# - 前端开发：杜海斌
-# - 后台开发：袁祥
-# - 市场部：张林茂
-# - 产品部：徐天翔/朱琳
-# - 综合部：莫林/曾雪倩/赵云兰/陈扬婷/罗丹
-# - 会计：赵月
-# - 采购：曹飞
-# - 运营：周靓雯
-# - 算法：彭雷
-# - 测试: 贺继成
-
-# *** 跑步盒子V0.2
-# - 侦听采用74AHC08:电源电压Vcc3.3v，输入支持5v TTL, 输出随Vcc支持3v CMOS
-# - 控制采用2选1选择器，型号暂定；
-
-# *** 主版本
-# - 配件界面：FragmentFactory.java---->AccessoriesChooseActivity.java---->AccessoryManager.java---->
-#   BindAccessoryActivity.java---->DiscoveryAccessoryActivity.java---->SyncDeviceManager.java
-#   ---->BLEDeviceFactory.java--->CodoonProtocolBLE.java--->start()--->BaseAccessorySyncManager.java-->jar包
-
+- SVM: Support Vector Machine, 支持向量机
 
