--- a/math.org
+++ b/math.org
@@ -82,6 +82,10 @@
 *** 应用
 ***** 多项式拟合
 - 概念：根据给定的m个点，并不要求这条曲线经过这些点，而是y=f(x)的近似曲线y=\(\Phi(x)\)；
+** 微积分
+- 梯度：函数在某点的梯度是这样一个向量，它的方向与取得最大方向导数的方向一
+  致，而它的摸为方向导数的最大值，梯度的模为
+  $$\bigtriangledown{f(x, y)}=\sqrt{(\frac{\partial{f}}{\partial{x}})^{2}+(\frac{\partial{f}}{\partial{y}})^{2}}$$ 
 * 矩阵
 ** 概念
 - 范数：设V是实数域R(或复数域C)上的n维线性空间，对于V中的任意一个向量或矩阵 \alpha 按照某一确定法则对应着一个实数，这个
@@ -150,8 +154,9 @@
 - 条件期望：对于X的每个取值，对Y所形成的分布确定其期望或者均值，称为Y的条件期望或条件均值，用E(Y|X_i)表示, 见图\ref{img-cond-exp}所示；
 - 回归线：对于每个X的取值X_{i}, 都有Y的条件期望E(Y|X_i)与之对应，代表Y的条件期望的点的轨迹形成的直线或者曲线称为回归线, 见
   图\ref{img-cond-exp}所示；
+  #+caption: 回归实例
   #+label: img-cond-exp
-  #+attr_latex: placement=[H]
+  #+attr_latex: placement=[H] scale = 0.4
   [[./img/cond-exp-plot.jpg]]
 - 回归函数：被解释变量Y的条件期望E(Y|X_i)随解释变量X的变化而有规律的变化，如果把Y的条件期望表现为X的如下函数，这个函数称
   为回归函数, 回归函数又分为总体回归函数和样本回归函数；$$ E(Y|X_{i}) = f(X_{i})$$
