--- a/algorithm.org
+++ b/algorithm.org
@@ -557,8 +557,9 @@ $$ \widehat{\beta_{1}}=\frac{\sum X_{i}^{2}\sum Y_{i} - \sum X_{i}\sum Y_{i}X_{i
 所以，(超)曲面，就有对多极值，并且有一个全局最大值和全局最小值。有些算法，只能在自己的小范围内搜索极大值和极小值，称为局
 部优化算法，也叫经典优化算法；有些算法，可以搜索整个(超)曲面取值范围内搜索最大值或最小值，称为全局性优化算法，也叫现代优
 化算法。
-#+label: img-optimize-example1
+*** 梯度下降法
 #+caption: 梯度下降法图例1
+#+label: img-optimize-example1
 #+attr_latex: placement=[H] scale=0.5
 #+begin_src gnuplot :exports results :file e:/OneDrive/my-learn/img/optimize1.png
 reset
@@ -584,14 +585,22 @@ $$f^{'}(x)=\frac{\mathrm{d}y}{\mathrm{d}x}$$
 如果，\(f^{'}(x) > 0\)则x增加，y增加，相当于B点；如果\(f^{'}(x)<0\)则x增加，y减小，相当于A点。要搜索极小值C点，在A点必须
 向x增加方向搜索，此时与A点梯度方向相反；在B点必须向x减小小方向搜索，此时与B点梯度方向相反。总之，搜索极小值，必须向负梯
 度方向搜索。
-一般情况分析，\(y=f(x_{1}, x_{2}, ..., x_{n})\)假设只有1个极小值点。初始设定参数为\(x_{1}^{0}, ..., x_{n}^{0}\), 寻找极
-小值点的步骤如下
-1. 首先设定一个较小的整数\(\eta, \epsilon\);
-2. 求当前位置处的各个偏导数：\(\frac{\partial{y}}{\partial{x_{1}}},..., \frac{\partial{y}}{\partial{x_{n}}}\);
-3. 按照下述方式修改当前函数的参数值：\(x_{i}^{0}->x_{i}^{0}-(\eta*\frac{\partial{y}}{\partial{x_{i}}})\);
-4. 如果超曲面参数变化量小于\(\eta\)，退出，否则返回第2步；
-例如函数\(y=\frac{x^{2}}{2}-2x\), 其图形见\ref{img-optimize-example2}, 计算过程如下，由于选用的2个参数值没有取好，会导致
-来回震荡，在极值点附近反复搜索。
+梯度下降法原理：由高数知任一点的负梯度方向是函数值在该点下降最快的方向，则
+利用负梯度作为极值搜索方向，达到搜寻区间最速下降的目的。而由极值点导数性质，
+知道该点的梯度等于0，故而其终止条件也就是梯度逼近于0，也就是当搜寻区间非常
+逼近极值点时，即当如下成立时，f(a)就是寻找到的f(x)的极值，该方法是一种局部
+搜寻法。
+$$\bigtriangledown{f(a)\rightarrow{0}$$
+求解函数在限制域下的极值 $$\min{f(x)},f\in{C}$$ 
+计算步骤如下
+1. 选定初始点\(x^{(1)}\), 给定搜索截止条件\(\varepsilon\), 它大于0，令k=1；
+2. 若\(\bigtriangledown{f(x^{(k)})}<\varepsilon\)则找到极值点的x，否则；
+3. 计算当前点的负梯度：令\(d^{(k)}=-\bigtriangledown{f(x^{(k)})}\)；
+4. 计算当前点的最佳步长\(s^{(k)}\)：\(\min{f(x^{(k)}+s*d^{(k)})}\)下的s；
+5. 计算新的点: \(x^{(k+1)}=x^{(k)}+s^{(k)}*d^{(k)}\), 返回2；
+6. 第2步停止条件还可以：\(||x^{(k+1)}-x^{(k)}||<\varepsilon\); 
+例1:函数\(y=\frac{x^{2}}{2}-2x\), 其图形见\ref{img-optimize-example2}, 计算
+过程如下，由于选用的2个参数值没有取好，会导致来回震荡，在极值点附近反复搜索。
 1. 先给定2个参数\(\epsilon=1.5, \eta=0.01\);
 2. 计算导数\(\frac{\mathrm{d}y}{\mathrm{d}x} = x-2\);
 3. 计算当前导数值y'=-6;
@@ -618,6 +627,15 @@ set arrow 2 from 9, f(9)    to  9, -10  nohead ls 3
 set arrow 3 from 2, f(2)    to  2, -10  nohead ls 3
 plot f(x) w l lw 1
 #+end_src
+例2：用梯度下降法求\(f(x_{1}, x_{2})=x_{1}^{2}+4x_{2}^{2}\)的极小值。
+1. 设初始点\(x^{(0)}=(1, 1)^{T}\);
+2. f梯度：\(\bigtriangledown{f(x_{1}, x_{2})}=(2x_{1}, 8x_{2})^{T}\);
+3. 由初始点得此点梯度值：\(\bigtriangledown{f(x^{(0)})}=(2, 8)^{T}\);
+4. 模：\(||\bigtriangledown{f(x^{(0)})}||=8.24621\);
+5. 第3步得负梯度：\(d^{(0)}=(-2, -8)^{T}\);
+6. 计算最佳步长：\(\min{f(x^{(0)}+s_{0}*d^{(0)})}=\min{(1-2s_{0})^{2}+4(1-8s_{0})^{2}}\);
+7. 得\(s_{0}=\frac{68}{520}\);
+8. 新点：\(x^{(1)}=(1, 1)^{T}-s_{0}(2, 8)^{T}=(0.738, -0.046)^{T}\), 返回3; 
 * 图像处理
 数字图像定义：数字图像指的是一个被采样和量化后的二维函数(该二维函数由光学方法产生), 采用等距离矩形网格采样，对幅度进行等
 间隔量化。至此一副数字图像是一个被量化的采样数值的二维矩阵，对维度、量化进行推广，还可以得到广义图像定义。
