修改一处笔误

--- a/algorithm.org
+++ b/algorithm.org
@@ -590,7 +590,7 @@ $$f^{'}(x)=\frac{\mathrm{d}y}{\mathrm{d}x}$$
 知道该点的梯度等于0，故而其终止条件也就是梯度逼近于0，也就是当搜寻区间非常
 逼近极值点时，即当如下成立时，f(a)就是寻找到的f(x)的极值，该方法是一种局部
 搜寻法。
-$$\bigtriangledown{f(a)\rightarrow{0}$$
+$$\bigtriangledown{f(a)\rightarrow{0}}$$
 求解函数在限制域下的极值 $$\min{f(x)},f\in{C}$$ 
 计算步骤如下
 1. 选定初始点\(x^{(1)}\), 给定搜索截止条件\(\varepsilon\), 它大于0，令k=1；
@@ -636,6 +636,13 @@ plot f(x) w l lw 1
 6. 计算最佳步长：\(\min{f(x^{(0)}+s_{0}*d^{(0)})}=\min{(1-2s_{0})^{2}+4(1-8s_{0})^{2}}\);
 7. 得\(s_{0}=\frac{68}{520}\);
 8. 新点：\(x^{(1)}=(1, 1)^{T}-s_{0}(2, 8)^{T}=(0.738, -0.046)^{T}\), 返回3; 
+*** 共轭梯度法
+对于多元二次方程
+$$f(x)=\frac{X^{T}AX}{2}+B^{T}X+C$$
+求导得
+$$f'(x)=AX+B$$
+因为针对X为向量，$$X^{T}AX$$ 对X求导得$$2AX$$ , $$B^{T}X$$ 求导得B；
+
 * 图像处理
 数字图像定义：数字图像指的是一个被采样和量化后的二维函数(该二维函数由光学方法产生), 采用等距离矩形网格采样，对幅度进行等
 间隔量化。至此一副数字图像是一个被量化的采样数值的二维矩阵，对维度、量化进行推广，还可以得到广义图像定义。
